--- a/website/index.html
+++ b/website/index.html
@@ -402,8 +402,8 @@ public class App {
 &lt;/dependency></pre>
 
             <h4>Gradle</h4>
-            <pre class="prettyprint"> compile 'com.sleepcamel.bsoneer:bsoneer:(insert latest version)'
- compile 'com.sleepcamel.bsoneer:bsoneer-compiler:(insert latest version)'</pre>
+            <pre class="prettyprint"> compile 'com.sleepcamel.bsoneer:bsoneer:<span class="version pln"><em>(insert latest version)</em></span>'
+ compile 'com.sleepcamel.bsoneer:bsoneer-compiler:<span class="version pln"><em>(insert latest version)</em></span>'</pre>
  
 			<h3 id="ide">IDE Configuration</h4>
             <p>Some IDEs require additional configuration in order to enable annotation processing.</p>
