--- a/website/index.html
+++ b/website/index.html
@@ -506,9 +506,8 @@ limitations under the License.</pre>
         });
       });
 
-	  /*
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-X']);
+      _gaq.push(['_setAccount', 'UA-64805378-1']);
       _gaq.push(['_trackPageview']);
 
       (function() {
@@ -516,7 +515,7 @@ limitations under the License.</pre>
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-	  */
+
     </script>
   </body>
 </html>
