--- a/website/index.html
+++ b/website/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="sBb26vRBkGENKmxsfj_2UyseWUE8rgDAJ113x9pDdds" />
     <title>Bsoneer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mongo 3.0 java library to generate codecs for existing beans">
